Port chiaki-lib to Playstation Vita.
This is the first in (probably) a series of commits to port Chiaki to PS
Vita. The Vita uses a custom NetBSD-based network stack with
vendor-prefixed syscalls. There exists a port of libc, but I ran into
issues when using the wrapped version of the native epoll functions, so
this port adds lots and lots of ifdefs all over the place to use Sony's
network function instead of the default libc functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(CPACK_DEBIAN_PACKAGE_SECTION "games")
 include(CPack)
 
 set(CHIAKI_IS_SWITCH ${NSWITCH})
+set(CHIAKI_IS_VITA ${VITA})
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake;${CMAKE_CURRENT_SOURCE_DIR}/setsu/cmake")
 
@@ -55,6 +56,10 @@ if(CHIAKI_IS_SWITCH)
 	# force mbedtls as crypto lib
 	set(CHIAKI_LIB_ENABLE_MBEDTLS ON)
 	add_definitions(-D__SWITCH__)
+endif()
+
+if(CHIAKI_IS_VITA)
+	add_definitions(-D__PSVITA__)
 endif()
 
 if(CHIAKI_USE_SYSTEM_JERASURE)
