--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "switch/borealis"]
 	path = switch/borealis
 	url = https://git.sr.ht/~thestr4ng3r/borealis
+[submodule "scripts/vita/parse_core"]
+	path = scripts/vita/parse_core
+	url = https://github.com/xyzz/vita-parse-core
