--- a/vita/CMakeLists.txt
+++ b/vita/CMakeLists.txt
@@ -83,9 +83,9 @@ if(CHIAKI_IS_VITA)
         VERSION ${VITA_VERSION}
         NAME ${VITA_APP_NAME}
         # Livearea stuff
-        FILE res/icon0.png sce_sys/icon0.png
-        FILE res/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
-        FILE res/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
+        # FILE res/icon0.png sce_sys/icon0.png
+        # FILE res/livearea/contents/bg.png sce_sys/livearea/contents/bg.png
+        # FILE res/livearea/contents/startup.png sce_sys/livearea/contents/startup.png
         FILE res/livearea/contents/template.xml sce_sys/livearea/contents/template.xml
         # Textures, other assets
         FILE res/assets/btn_add_active.png assets/btn_add_active.png
